# C-Launcher

./: replit.md  replit.nix
.github/workflows/: release.yml
attached_assets/: Pasted--GENESIS-LAUNCHER-C-HMCCC-TEMPLATE-UI-SYSTEM-SPECIFICAT_1777755824507.txt  Pasted-C-Minecraft-Launcher-Genesis-Process-Ownership-Lifecycl_1777757648497.txt  Pasted-C-Minecraft-Launcher-Genesis-style-HMCCC-inspired-Syste_1777757253105.txt  Pasted-Design-and-implement-a-production-grade-lightweight-C-M_1777754309326.txt  Pasted-PRE-RELEASE-VALIDATION-NON-TTY-CRASH-SIGFPE-INVESTIGATI_1777771569681.txt  Pasted-PROMPT-C-Launcher-Critical-Fix-Only-No-Refactors-You-ar_1777759213942.txt  Pasted-You-are-a-forensic-runtime-verification-engine-for-a-C-_1777760068446.txt  Pasted-You-are-a-forensic-systems-auditor-for-concurrent-C-dis_1777759685500.txt  Pasted-You-are-working-inside-the-C-Minecraft-launcher-project_1777758395282.txt  Pasted-You-are-working-on-the-C-launcher-stabilization-layer-P_1777758759426.txt
genesis-launcher/: .clang-format  .gitignore  CMakeLists.txt  README.md  core  genesis_launcher.code-workspace  vcpkg.json
genesis-launcher/.github/workflows/: release.yml
genesis-launcher/audit/: harness.cpp  logger_stub.cpp
genesis-launcher/cmake/: CompilerFlags.cmake  Dependencies.cmake  Platform.cmake
genesis-launcher/include/genesis/assets/: AssetManager.hpp  Downloader.hpp  Verifier.hpp
genesis-launcher/include/genesis/auth/: AuthManager.hpp  MicrosoftAuth.hpp  SecureStorage.hpp  Token.hpp
genesis-launcher/include/genesis/core/: EventBus.hpp  Launcher.hpp  Result.hpp  State.hpp
genesis-launcher/include/genesis/instance/: Instance.hpp  InstanceManager.hpp
genesis-launcher/include/genesis/jvm/: JavaFinder.hpp  JvmConfig.hpp  JvmOrchestrator.hpp  ProcessHandle.hpp
genesis-launcher/include/genesis/logging/: Logger.hpp
genesis-launcher/include/genesis/mods/: ModrinthClient.hpp  PerformancePack.hpp
genesis-launcher/include/genesis/platform/: PlatformUtils.hpp
genesis-launcher/include/genesis/ui/: AsyncLauncher.hpp  AuthView.hpp  DownloadView.hpp  InstanceView.hpp  LogStream.hpp  MainWindow.hpp  ProcessMonitor.hpp  SettingsView.hpp  Shell.hpp  Theme.hpp  UiState.hpp  Views.hpp  Widgets.hpp
genesis-launcher/include/genesis/update/: Updater.hpp
genesis-launcher/include/genesis/version/: Profile.hpp  VersionManager.hpp  VersionManifest.hpp
genesis-launcher/packaging/linux/: build-appimage.sh  genesis.desktop
genesis-launcher/packaging/macos/: make-icns.sh
genesis-launcher/packaging/windows/: genesis.rc
genesis-launcher/src/: main.cpp
genesis-launcher/src/assets/: AssetManager.cpp  Downloader.cpp  Verifier.cpp
genesis-launcher/src/auth/: AuthManager.cpp  MicrosoftAuth.cpp  SecureStorage.cpp
genesis-launcher/src/core/: EventBus.cpp  Launcher.cpp  State.cpp
genesis-launcher/src/instance/: Instance.cpp  InstanceManager.cpp
genesis-launcher/src/jvm/: JavaFinder.cpp  JvmConfig.cpp  JvmOrchestrator.cpp  ProcessHandle.cpp
genesis-launcher/src/logging/: Logger.cpp
genesis-launcher/src/mods/: ModrinthClient.cpp  PerformancePack.cpp
genesis-launcher/src/platform/: PlatformUtils.cpp
genesis-launcher/src/platform/linux/: JavaFinder_Linux.cpp  ProcessSpawn_Linux.cpp  SecureStorage_Linux.cpp
genesis-launcher/src/platform/macos/: JavaFinder_Mac.cpp  ProcessSpawn_Mac.cpp  SecureStorage_Mac.cpp
genesis-launcher/src/platform/windows/: JavaFinder_Win.cpp  ProcessSpawn_Win.cpp  SecureStorage_Win.cpp
genesis-launcher/src/ui/: AsyncLauncher.cpp  AuthView.cpp  DownloadView.cpp  InstanceView.cpp  LogStream.cpp  MainWindow.cpp  ProcessMonitor.cpp  SettingsView.cpp  Shell.cpp  Theme.cpp  UiState.cpp  Widgets.cpp
genesis-launcher/src/ui/views/: DiagnosticsView.cpp  InstanceDashboard.cpp  LogView.cpp  ModpackView.cpp  SettingsTab.cpp  VersionView.cpp
genesis-launcher/src/update/: Updater.cpp
genesis-launcher/src/version/: Profile.cpp  VersionManager.cpp  VersionManifest.cpp
